# chess-ai

./: .gitignore  CMakeLists.txt
include/: game.hpp  gui.hpp  utils.hpp
src/: CMakeLists.txt  game.cpp  gui.cpp  main.cpp  utils.cpp
